src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

main {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.button-group {
  display: flex;
  gap: 1rem;
  justify-content: center;
}

.option-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(4, 1fr);

  gap: 1rem;

  &>div.option {
    aspect-ratio: 1;
    padding: 0.5rem;
    border: 1px solid white;
    border-radius: 0.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;

    &.selected {
      background-color: #f0f0f0;
      color: black;
    }
  }
}

div.group {
  display: flex;

  gap: 1rem;
  flex-direction: column;
  grid-column: span 4;
  color: black;
  padding: 0.5rem;
  border-radius: 0.5rem;
}

p {
  margin: 0;
  padding: 0;
}

.group-0 {
  background-color: #F2FF32;
}

.group-1 {
  background-color: #6EE420;
}

.group-2 {
  background-color: #20AFE4;
}

.group-3 {
  background-color: #AF20E4;
}

.list>span:not(:last-child)::after {
  content: ', ';
}

